puliendo texto del paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -154,9 +154,8 @@ statistical uncertainties.
 We only find a small discrepancy at low masses, $M<10^{13}\hMsun$, where
 our method yields lower median concentration values by $15\%-20\%$
 compared to the velocity and density methods. 
-From these results we believe that the new method deserves to be
-included in a simulator's toolkit to probe the internal structure of
-dark matter halos.
+From these results we believe that the new method is promising tool
+to probe the internal structure of dark matter halos.
 \end{abstract}
 
 \begin{keywords}
@@ -171,10 +170,10 @@ Methods: data analysis - numerical - N-body simulations
 %*************************************************************************
 In the current structure formation paradigm the properties of galaxies
 are coupled to the evolution of their dark matter (DM) hosting halo.
-This dependence has motivated the detailed study of dark matter halo
-properties such as its formation history and internal structure. 
-In particular, the sizes and dynamics of galaxies are determined by
+For instance, the sizes and dynamics of galaxies are determined by
 the DM distribution inside a halo.
+This dependence has motivated the detailed study of DM halo
+properties such as its formation history and internal structure. 
 
 The internal DM distribution is parameterized through the density
 profile. 
@@ -202,7 +201,7 @@ In these studies
 the results are summarized through the
 mass-concentration relationship; that is the distribution of
 concentration values at a fixed halo mass and redshift.
-A big challenge in such numerical experiments is having a
+The success of such numerical experiments rests on a
 reliable algorithm to estimate the concentration. 
 Such an algorithm should provide unbiased results and must be robust
 when applied to simulations of different numerical resolution.  
