--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -137,24 +137,25 @@ concentration both on mock and N-body halos.
 We compare these results against two other methods:
 maximum radial velocity measurements and radial particle binning to
 fit the density profile. 
-Tests on  the mock halos show that the accuracy of our method to recover input
+Tests on the mock halos show that the accuracy of our method to recover input
 concentrations varies with halo resolution, outperforming the other
-two methods. For halos
-sampled with $20$ particles our method recovers the input
+two methods. 
+For halos sampled with $20$ particles our method recovers the input
 concentration with $10\%$ accuracy, while for the maximum radial
-velocity method it is on the order of $20\%$ 
-and density profile methods fail at the $100\%$ level.
+velocity method it is on the order of $20\%$ and density profile
+methods fail at the $100\%$ level. 
 For halos with $2\times 10^4$ particles our method achieves a recovery
 accuracy of $0.01\%$ while the velocity and density profile methods
 achieve $0.1\%$ and $1\%$, respectively. 
 We also measure the mass-concentration relationship on N-body
-data. We find that within the probed mass range ($10^{12}\hMsun <
+data. 
+We find that in the probed mass range ($10^{12}\hMsun <
 10^{14}\hMsun$) the three methods give consistent results within the
 statistical uncertainties.   
 We only find a small discrepancy at low masses, $M<10^{13}\hMsun$, where
 our method yields lower median concentration values by $15\%-20\%$
 compared to the velocity and density methods. 
-From these results we believe that the new method is promising tool
+From these results we believe that the new method is a promising tool
 to probe the internal structure of dark matter halos.
 \end{abstract}
 
