improved plot description in body paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -527,7 +527,12 @@ quantified by a large $\avg{|D|}$.
 \end{center}
 \caption{Mass-concentration relationship for the three different
   methods used on the same cosmological N-body data. 
-  The lines correspond to the median concentration values in each bin.
+  All halos are used regardless of their relaxation state.
+  The lines correspond to the median concentration values in each mass bin.
+  The shaded region presents 10 and 90 per cent spread.
+  For clarity we only show the spread for the concentrations estimated
+  using our method. The other two methods have a similar spread. The
+  dotted line corresponds to fits reported by \citep{Prada2012}.
   \label{fig:concentration}}
 \end{figure}
 
