report power law fit

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -618,6 +618,17 @@ only report results from overdensities with at least $200$ particles.
 Figure \ref{fig:concentration} shows the results of the
 mass-concentration relationship.
 
+We find that the median concentraion can be fit by the following
+relationship
+\begin{equation}
+c_{200} = 5.62 \left(\frac{M_{200}}{10^{12}\hMsun}\right)^{-0.061}, 
+\end{equation}
+%
+which has a similar power value compared to the $-0.075$ reported by
+\citep{Prada2012}, the normalization is $\sim 20\%$ lower compared to
+the $7.28$ value reported by the same authors.
+
+
 %{\em Aqui hay algo importante que hay que entender antes de discutir
 %  esta gráfica , y es la razón por la cual el metodo del perfil de
 %  masa da valores de concentración tan bajos a baja masa y comparables
