--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -625,9 +625,9 @@ c_{200} = 5.62 \left(\frac{M_{200}}{10^{12}\hMsun}\right)^{-0.061},
 \end{equation}
 %
 which has a similar power value compared to the $-0.075$ reported by
-\citep{Prada2012}, the normalization is $\sim 20\%$ lower compared to
-the $7.28$ value reported by the same authors.
-
+\citep{Prada2012}, while the normalization is $\sim 20\%$ lower
+compared to the $7.28$ value reported by the same authors. 
+ 
 
 %{\em Aqui hay algo importante que hay que entender antes de discutir
 %  esta gráfica , y es la razón por la cual el metodo del perfil de
