--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -125,21 +125,19 @@ $^2$Instituto de F\'{\i}sica - FCEN, Universidad de Antioquia, Calle
 
 \begin{abstract}
 We present a new algorithm to estimate the concentration of N-body
-dark matter halos.
-The method uses the integrated mass profile to find the optimal
-concentration value. 
-Its main advantage is that it uses the full particle information
-without any binning, making it realiable in  cases when low numerical
-resolution becomes a limitation for other methods.  
+dark matter halos using the integrated mass profile.
+The method uses the full particle information without any binning,
+making it realiable in  cases when low numerical resolution becomes a
+limitation for other methods.   
 Additionally, the algorithm is straightforward to implement.  
 We test the performance of this method by estimating halo
 concentration both on mock and N-body halos. 
 We compare these results against two other methods:
 maximum radial velocity measurements and radial particle binning to
 fit the density profile. 
-Tests on the mock halos show that the accuracy of our method to recover input
-concentrations varies with halo resolution, outperforming the other
-two methods. 
+Tests on the mock halos show that the accuracy of our method to
+recover known input concentrations varies with halo resolution,
+outperforming the other two methods. 
 For halos sampled with $20$ particles our method recovers the input
 concentration with $10\%$ accuracy, while for the maximum radial
 velocity method it is on the order of $20\%$ and density profile
@@ -152,7 +150,7 @@ data.
 We find that in the probed mass range ($10^{12}\hMsun <
 10^{14}\hMsun$) the three methods give consistent results within the
 statistical uncertainties.   
-We only find a small discrepancy at low masses, $M<10^{13}\hMsun$, where
+We only find a small deviation at low masses, $M<10^{13}\hMsun$, where
 our method yields lower median concentration values by $15\%-20\%$
 compared to the velocity and density methods. 
 From these results we believe that the new method is a promising tool
@@ -172,32 +170,31 @@ Methods: data analysis - numerical - N-body simulations
 In the current structure formation paradigm the properties of galaxies
 are coupled to the evolution of their dark matter (DM) hosting halo.
 For instance, the sizes and dynamics of galaxies are determined by
-the DM distribution inside a halo.
-This dependence has motivated the detailed study of DM halo
-properties such as its formation history and internal structure. 
+the DM distribution inside a halo. This motivates the detailed study
+a DM halo internal structure. 
 
-The internal DM distribution is parameterized through the density
-profile. 
+The internal DM distribution in a halo can be parameterized through the density
+profile.  
 In a first approximation this profile is spherically symmetric and
 its density only dependens on the radial coordinate. 
-One the most popular parameterizations for DM halo radial
-density distribution is the Navarro-Frenk-White (NFW) profile
+One the most popular radial parameterizations is  is the
+Navarro-Frenk-White (NFW) profile 
 \citep{NFW}.   
 If one is not interested in the very central region of the
 dark matter halo (where galaxy formation takes place, and where the
-effects of baryon physics on dark matter distribution is still an
+effects of baryon physics on dark matter distribution are still 
 unknown) one can also assume that this profile is universal.
 \citep{Navarro2010}.  
  This profile is a double power law in radius, where the transition
 break happens at the so-called scale radius, $r_s$.  
-The ratio between the scale radius and the virial radius $R_v$ is
+The ratio between the scale radius and the halo virial radius $R_v$ is
 known as the concentration $c=R_v/r_s$. 
 
 
 The concentration of the NFW profile provides the conceptual
 framework to study simulated dark matter halos as a function of
 redshift and cosmological parameters.
-In these studies 
+In many numerical studies 
 \citep{Neto2007,Maccio2008,Duffy2008,Munoz2011,Prada2012,Ludlow2014} 
 the results are summarized through the
 mass-concentration relationship; that is the distribution of
@@ -215,8 +212,9 @@ proceeds to fit the density as a function of the radius to the NFW
 profile.  
 A second method uses an analytic property of the NFW profile
 that relates the maximum of the ratio of the circular velocity to the
-virial velocity.  The concentration can be then found as the root of a
-algebraic equation dependent on this maximum value.
+virial velocity, $V_{\rm circ}$/$V_{\rm vir}$.  The concentration can
+be then found as the root of an algebraic equation dependent on this
+maximum value.  
 
 The first method is straightforward to apply but presents two
 disadvantages.  
@@ -241,13 +239,14 @@ This approach has two advantages with respect to the above mentioned
 methods.  
 It does not involve any data binning and does not throw away data
 points. 
-This results in a robust estimate even at low resolution/particle
+This translates into a robust estimate even at low resolution/particle
 numbers.   
 Furthermore, since the method does not require any binning, there is
-no need to tune numerical parameters, providing a new independent
-method to estimate the concentration parameter. 
-Here we provide a detailed description of this method and a
-comparison against the two traditional methods by measuring its
+no need to tune numerical parameters.
+This provides a new independent method to estimate the concentration
+parameter.   
+Here we provide a detailed description of the method and a
+comparison against the two traditional techniques by measuring its
 performance both on mock and N-body halos.
 
 
@@ -334,7 +333,7 @@ It is also customary to express the mass of the halo in terms of the
 circular velocity $V_{c}=\sqrt{GM(<r)/r}$.
 From this we can define a new dimensionless circular velocity $v(<x)\equiv
 V_{c}(<r)/V_{c}(<r_v)$, using the result in Eq. \ref{eq:profile}
-to have:
+we have:
 
 \begin{equation}
 v(<x)=\sqrt{\frac{1}{A}\left[\frac{\ln\left(1+xc\right)}{x}-\frac{c}{xc+1}\right]},
@@ -425,7 +424,7 @@ The first sample is composed by mock halos generated to have known
 concentration values in perfect spherical symmetry following an NFW
 profile.    
 Using this sample we want to quantify the ability to recover the
-expected concentration as a function of particle numbe.
+expected concentration as a function of particle number.
 The second sample comes from a publicly available N-body cosmological
 simulation.  
 In this way we test the new method on more realistic and complex
@@ -545,14 +544,14 @@ $\avg{|D|}$ values compared to the other two.
 Its accuracy is on the order of $10\%$ for $20$ particles in the halo,
 decreasing to $0.01\%$ for halos with $20000$ particles.  
 The dependence of $\avg{|D|}$ with the particle number $N$
-goesapproximately as $\avg{|D|}\propto N^{-1/2}$.   
-This hints that the accuracy of the method could be due to a decrease
-of Poisson noise. 
+goes approximately as $\avg{|D|}\propto N^{-1/2}$.   
+This hints that the increasing accuracy of the method could be due to
+a decrease of Poisson noise. 
 
 The method based on the maximum of the circular velocity shows a
-similar behaviour $\avg{|D|}\propto N^{-1/2}$.  
+similar behaviour with $\avg{|D|}\propto N^{-1/3}$.  
 Its accuracy is $2-5$ times lower than in our method, on the order of
-$20\%$ for $20$  particle halos and $0.5\%$ for $20000$ particle
+$20\%$ for $20$ particle halos and $0.5\%$ for $20000$ particle
 halos. 
 The method  based on the direct density fit shows the lowest accuracy for a low
   particle number. 
@@ -561,7 +560,7 @@ The method  based on the direct density fit shows the lowest accuracy for a low
   of the mass density profile, and therefore to a biased estimation of
   the concentration parameter. 
 This behaviour is evident in the large values of $\avg{|D|}$ for halos
-with number of particles below ~200 and an intermediate accuracy
+with number of particles below $\sim 200$ and an intermediate accuracy
 between the other two methods for a high particle number. 
 
 \subsection{Halos from a cosmological simulation}
@@ -575,15 +574,14 @@ However, simulated dark matter halos in a cosmological context are
 complex. 
 They are not isolated, many of them  experience mergers that take them
 out of the equilibrium. 
-Halos may have also plenty of substructure, etc. All these effects
+Halos may have also plenty of substructure. All these effects
 disturb the mass density profile, taking it  away from the ideal NFW
 profile. 
-In order to see the completeley explore performance of our method, we use
-it to estimate the  concentration parameter in dark matter halos
+In order to explore the performance of our method in this setting, we
+use it to estimate the  concentration parameter in dark matter halos
 obtained from a cosmological N-body simulation and compare with the
 other two classical methods.   
  
-
 We use data from the MultiDark cosmological simulation that follows
 the non-linear evolution of a dark matter density field sampled with
 $2048^3$ particles over a cubic box of $1000\ \hMpc$ on a side.  
@@ -594,8 +592,9 @@ can be found in \citep{2013AN....334..691R}.
 %%%%%%%
 
 We use a halo sample containing all the halos located in a cubic
-sub-volume of $100$ \hMpc on a side centered on the most massive halo
-in the simulation at $z=0$  which corresponds to the \texttt{miniMDR1}
+sub-volume of $100$ \hMpc\ on a side centered on the most massive halo
+in the simulation at $z=0$.
+This dataset corresponds to the \texttt{miniMDR1}
 table in the  database.  
 From this sample we select all the halos at $z=0$ detected
 with a Friends-of-Friends (FoF) algorithm with masses in the interval
