nuevo texto en el paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -634,11 +634,13 @@ only explain at most $5\%$ of the offset between methods.  We note
 that the highest concentration values correspond to the smallest halos
 with $\sim 200$ particles, a regime where both the density and
 velocity methods are reliable only the $5\%$ in a perfect spherical
-halo.  From this we suggest that asserting with confidence the
-systematic difference between the different methods should be
-confirmed  a higher resolution simulation and larger statistics. We
-leave this comparison for future work.
- 
+halo.  
+This difference might actually signal a deviation from the NFW profile
+due to the low resolution in the simulation. From this we suggest that
+asserting with confidence the systematic difference between the
+different methods should be confirmed  a higher resolution simulation
+and larger statistics. We leave this comparison for future work. 
+  
 
 Figure \ref{fig:concentration} summarizes the previous results in the
 mass-concentration relationship.
