--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -112,7 +112,7 @@
 \parbox[t]{\textwidth}{\raggedright 
   C. Poveda \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
   J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
-  J. C. Mu\~noz-Cuartas \thanks{xxxx@udea.edu.co}$^{2}$
+  J. C. Mu\~noz-Cuartas \thanks{juan.munozc@udea.edu.co}$^{2}$
 }
 \vspace*{6pt}\\
 $^1$Departamento de F\'{i}sica, Universidad de los Andes, Cra. 1
@@ -177,7 +177,7 @@ The internal DM distribution in a halo can be parameterized through the density
 profile.  
 In a first approximation this profile is spherically symmetric and
 its density only dependens on the radial coordinate. 
-One the most popular radial parameterizations is  is the
+One the most popular radial parameterizations is the
 Navarro-Frenk-White (NFW) profile 
 \citep{NFW}.   
 If one is not interested in the very central region of the
@@ -222,7 +222,7 @@ First, it requires a large number of particles in
 order to have a proper density estimate in each bin.  
 This makes the method robust only for halos with at least $10^3$ particles.  
 The second problem is that there is not a way to estimate the optimal
-radial bin size, different choices produce different results for the
+radial bin size, different choices may produce different results for the
 concentration.
 
 The second method solves the two problems mentioned above.  
