--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -108,9 +108,9 @@
 %=========================================================================
 \title[Halo concentration from the mass profile]{Estimating dark matter
   halo concentration using the integrated mass profile} 
-\author[C. Poveda, J.E. Forero-Romero, J.C. Mu\~noz-Cuartas]{
+\author[C.N. Poveda-Ruiz, J.E. Forero-Romero, J.C. Mu\~noz-Cuartas]{
 \parbox[t]{\textwidth}{\raggedright 
-  C. Poveda \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
+  C. N. Poveda-Ruiz \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
   J. E. Forero-Romero \thanks{je.forero@uniandes.edu.co}$^{1}$
   J. C. Mu\~noz-Cuartas \thanks{juan.munozc@udea.edu.co}$^{2}$
 }
