--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -681,7 +681,8 @@ method on the mass-concentration relationship.  Although the three
 methods are in general agreement there are some noticeable differences
 in the mass concentration relationship.
 
-
+\section*{Acknowledgemets}
+ JCMC wants to thanks to ``Estrategia de sostenibilidad 2014-2015, Universidad de Antioquia''
 
 \bibliographystyle{mn2e}
 \bibliography{references}
